--- a/PracticaLW/style.css
+++ b/PracticaLW/style.css
@@ -121,6 +121,32 @@ body{
 	padding:20px;
 }
 
+.expandir{
+	border-bottom: 1px; 
+	line-height: 0.1em;
+	margin: 10px 0 20px; 
+	color: white;
+	cursor: pointer;
+	width: 100%;
+	border: none;
+	text-align: center;
+	outline: none;
+}
+
+.expandir span{
+	font-size: 20px;	
+	font-family: "Montserrat",sans-serif;
+    background:#7988f7; 
+    padding:0 10px;
+}
+
+.textexpandir{
+	padding: 0 18px;
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.4s ease-out;;
+}
+
 .tablink{
 	font-family:"Montserrat";
 	background-color: #555;
@@ -161,7 +187,7 @@ body{
 	position: absolute;
 	top: 50%;
 	width: auto;
-	margin-top: 50%;
+	margin-top: -25px;
 	padding: 16px;
 	color: white;
 	font-weight: bold;
@@ -180,19 +206,8 @@ body{
 	background-color: rgba(0,0,0,0.8);
 }
 
-.dot {
-	cursor: pointer;
-	height: 15px;
-	width: 15px;
-	margin: 0 2px;
-	background-color: #F0985D;
-	border-radius: 50%;
-	display: inline-block;
-	transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-	background-color: #976b4c;
+.slide, .slide2 {
+  display: none;
 }
 
 .footer{
